- Martin 2007-02-22 
  - Now you can adjust the range of the Gnuplot-pictures of FHT in the config.php

- Martin 2007-03-19
  - Feature: WS300 ist now supported
  - Adjusted to new structure of FHEM (IT NEEDS now FHZ1000/FHEM >= v3.4!)

- Martin 2007-03-22
  - New arrangement of the graphics.
  - Better support for WS300
  - FHT-Pulldown will now be called by the button "adjust"
  - FHT-PHP-Grafics now with temperature, desired-temp and actuator

- Martin 2007-03-29
  - release pgm3 for fhem 4.0, pgm3 has now the verson 0.8.0

- Martin 2007-04-10
  - Minor Bugfixes (errormessage for php4, fhs20pulldown)
 
- Martin 2007-07-13
  - Section FHZ-DEVICES s now hidden if it is not needed

- Martin 2007-09-04
  - Small changes in gnuplot.php, config.php, index.php, hms100.php

- Martin 2007-09-05
  - Change in gnuplot.php: FHT: if there are not sufficient data (e.g. actuator) only measured-temp will be drawn

